
0.0.1
Initial revision.

0.0.2
Fixed symlinks in the distribution, relpaced them with files. The `libtoolize`
utility created the symlinks originally, so it was re-run with the -c option to
copy files instead of linking.

Updated README, it had bad information about documentation.

Uploaded a version of the API documentation online:
http://fletchtronics.net/cdctool-api/

0.0.3
Added support for interactive mode. Changed CDCLineBuffer so that it can support
input from any source, not just CDCFile. Added --interactive,-a command line
option to the cdctool program.

0.0.4
Two minor syntax issues causing -Wall -Werror to stop the build were fixed.