@@ -20,7 +20,7 @@
 #ifndef CDCPARITY_H
 #define CDCPARITY_H
 
-#include "CDC_file.h"
+#include <CDC_file.h>
 
 /**
  *  Set of common parity settings.
